--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <h1>Botlar</h1>
     <p>El classico</p>
-    
+    <p class="text-[50px] bg-red-500 text-white">Sunnatbek</p>
     
     <script src="./main.js"></script>
 </body>
