--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <h1>Botlar</h1>
     <p>El classico</p>
+    <span class="text-red-600 font-bold">Hayot1</span>
     
     
     <script src="./main.js"></script>
