--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <h1>Botlar</h1>
     <p>El classico</p>
-    
+    <p class="text-[40px] bg-yellow-400 text-red-600"></p>
     
     <script src="./main.js"></script>
 </body>
